@@ -43,7 +43,7 @@ None.
 
 =head1 VERSION
 
-version 0.04
+version 0.05
 
 =head1 METHODS
 
